--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
-
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: 'Kanit', sans-serif;
-}
-
 body{
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: #333;
 }
+
+#gameCanvas{
+    border: solid 1px black;
+    background-color: lightblue;
+    margin: 0;
+    padding: 0;
+}
+
