--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
+.game-container{
+    margin: 0;
+    padding: 0;
+}
+
 #gameCanvas{
+    margin: 0;
+    padding: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
-    height: 400px;
-    border: 2px solid black;
+    width: 100%;
+    min-width: 568;
+    height: 100%;
+    min-height: 320;
 }
 
