--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 
-.game-container{
-    margin: 0;
-    padding: 0;
-}
+*{ margin:0;padding:0;}
 
 #gameCanvas{
-    margin: 0;
-    padding: 0;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,45 +13,55 @@
     min-height: 320;
 }
 
-.home-button{
+.button{
     z-index: 1;
     margin: 0;
     padding: 0;
     position: absolute;
+    transform: translate(-50%, 0%);
+    text-align: center;
+}
+
+.home-button{
     top: 0%;
     left: 50%;
-    transform: translate(-50%, 0%);
     width: 30%;
     min-width: 568/3;
-    text-align: center;
 }
 
 .home-button>a{
     color: yellow;
     font-family: "Goldman", sans-serif;
     font-size: 4vh;
+    text-decoration: none;
 }
 
 .up-button{
-    z-index: 1;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 12%;
-    left: 84%;
+    top: 60%;
+    left: 6%;
     transform: translate(-50%, 0%);
-    text-align: center;
-    color: whitesmoke;
+    color: yellow;
 }
 
 .down-button{
-    z-index: 1;
+    top: 80%;
+    left: 6%;
+    transform: translate(-50%, 0%);
+    color: yellow;
+}
+
+.enter-button{
+    top: 24%;
+    left: 24%;
+    transform: translate(-50%, 0%);
+    color: green
+}
+
+.title-screen{
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
-    position: absolute;
-    top: 24%;
-    left: 84%;
-    transform: translate(-50%, 0%);
-    text-align: center;
-    color: whitesmoke;
+    color: green;
 }
+
