--- a/css/style.css
+++ b/css/style.css
@@ -166,9 +166,9 @@
 
 .control-button{
     transform: translate(-50%, 0%);
-    color: blue;
-    background-color: whitesmoke;
-    border: 2px outset darkgray;
+    color: whitesmoke;
+    background-color: blue;
+    border: 2px outset whitesmoke;
     border-radius: 12.5%;
     padding: 2px;
 }
